force-app/main/default/objects/Center__c/Center__c.object-meta.xml
<CustomObject>
    <label>Centro</label>
    <nameField>
        <displayFormat>Centro-{000000}</displayFormat>
        <label>Centro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Centros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>