force-app/main/default/objects/Center__c/fields/CenterName__c.field-meta.xml
<CustomField>
    <fullName>CenterName__c</fullName>
    <label>Nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>