force-app/main/default/objects/Center__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <label>Deposito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>