force-app/main/default/objects/Center__c/fields/DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannel__c</fullName>
    <label>Canal Distribuição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>