force-app/main/default/objects/Center__c/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <label>Bairro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>