force-app/main/default/objects/Center__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Escritório de Vendas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>