force-app/main/default/objects/Center__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Telefone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>