force-app/main/default/objects/Center__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <label>Org. Vendas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>