force-app/main/default/objects/Center__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Loja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>