force-app/main/default/objects/Center__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SalesOrg__c</columns>
    <columns>DistributionChannel__c</columns>
    <columns>CEP__c</columns>
    <columns>Phone__c</columns>
    <columns>Address__c</columns>
    <columns>Neighborhood__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>